--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
   background-image: linear-gradient(90deg, #37aaa4 0%, #9e5ce9 100%);
 }
 
+form {
+    margin: 0 auto; 
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -16,7 +20,7 @@ body {
 }
 
 .input {
-  width: 300px;
+  min-width: 300px;
   height: 35px;
   margin: 50px auto;
   border-radius: 5px;
@@ -42,6 +46,7 @@ body {
   width: 300px;
   padding: 0 20px;
   box-shadow: 0 0 5px white;
+  min-height: 150px;
 }
 
 .block-todo-header,
@@ -61,6 +66,7 @@ body {
   background-color: lightgreen;
 }
 .task {
+  font-size: 20px;
   margin-top: 20px;
   margin-bottom: 25px;
   border-bottom: 1px solid gray;
